Bug 420275 - Super Key Application Launcher trigger Broken
Summary: Super Key Application Launcher trigger Broken
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-18 21:38 UTC by FlyingWaffle
Modified: 2020-04-18 23:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
current lattedockrc (2.38 KB, text/plain)
2020-04-18 21:38 UTC, FlyingWaffle
Details
current kwinrc (2.76 KB, text/plain)
2020-04-18 21:39 UTC, FlyingWaffle
Details
default layout file (8.31 KB, text/plain)
2020-04-18 21:52 UTC, FlyingWaffle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FlyingWaffle 2020-04-18 21:38:17 UTC
Created attachment 127671 [details]
current lattedockrc

I had my Super key  set to trigger the KDE Application Dashboard, and one of the recent updates broke that (unsure which one as I was focussed on other things for the past few times I updated).  Unsetting and resetting the option in the Latte Configuration menu also produces no changes to lattedockrc.

STEPS TO REPRODUCE
1. Enable using super key to trigger application launcher
2. try using it
3. (unsure otherwise; I am using the Dashboard rather than the default lauuncher)

OBSERVED RESULT
Pressing super key does nothing

EXPECTED RESULT
Pressing super key triggers application dashboard globally

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo 5.6.5 - 64bit
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
I also tried using the method listed on the Github FAQ for LatteDock, that doesn't make a difference either.
Comment 1 FlyingWaffle 2020-04-18 21:39:36 UTC
Created attachment 127672 [details]
current kwinrc

also adding my kwinrc; as you can see I added the change here as specified in the FAQ, no dice.
Comment 2 Michail Vourlakos 2020-04-18 21:47:28 UTC
1. lattedockrc is not storing anything related. Latte checks if this is enabled or not directly with kwinrc file
2. Your kwinrc file looks ok from my understanding
3. In my system, latest Latte git version works fine with this
4. Please send your Default layout file to check it out.
5. How do you install Latte git version? Are you building it by yourself? There are big chances the distro repos are outdated.
Comment 3 FlyingWaffle 2020-04-18 21:52:29 UTC
Created attachment 127673 [details]
default layout file

Layout attached.  My current install is from the 'kde' overlay on Gentoo using emerge/portage.  I'll try building manually and see if that makes a difference.
Comment 4 FlyingWaffle 2020-04-18 22:05:55 UTC
Building manually doesn't seem to have made a difference.
When I use the Super key as part of other shortcuts it works fine, pressing and holding also works as expected.  Oddly, when I have nothing else maximized and I press the Super key it makes my top panel turn opaque as though I had just maximized a window or opened the application launcher but the application dashboard does not actually trigger.

Application dashboard does work with other manually set shortcuts (Alt + F1 in this case).
Comment 5 Michail Vourlakos 2020-04-18 22:49:32 UTC
Application Launchers that work as pop ups, do they work ok?
Comment 6 Michail Vourlakos 2020-04-18 22:50:23 UTC
I answer myself... They will work ok... I think I know why this broke.
Comment 7 Michail Vourlakos 2020-04-18 23:27:13 UTC
Git commit 0d0b0413bb5be0d0667f3453de3bbe28a3aeb930 by Michail Vourlakos.
Committed on 18/04/2020 at 23:24.
Pushed by mvourlakos into branch 'master'.

activate appletquickitem if it is not expandable

--when the user requests to activate an applet that
it is not expandable such as DashBoard then only
thing that it is possible, it is to forcefully
activate it

M  +16   -3    app/view/containmentinterface.cpp
M  +2    -0    app/view/containmentinterface.h

https://commits.kde.org/latte-dock/0d0b0413bb5be0d0667f3453de3bbe28a3aeb930